<resources>
    <string name="app_name">Allergy Checker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_pager_indicator">SKIP</string>
    <string name="title_activity_takeoff">App Takes off here</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the
        camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="nuts">Nuts, Nut</string>
    <string name="almond">Almond, Almonds</string>
    <string name="brazil">Brazil Nuts</string>
    <string name="cocoa">Cocoa</string>
    <string name="hazelnut">Hazelnut, Hazelnuts</string>
    <string name="macadamia">Macadamia Nuts</string>
    <string name="pecans">Pecans, Pecan</string>
    <string name="pili">Pili Nuts</string>
    <string name="pine">Pine Nuts</string>
    <string name="pistachios">Pistachios, Pistachios</string>
    <string name="soy">Soy</string>
    <string name="tiger">Tiger Nuts</string>
    <string name="walnuts">Walnuts</string>
    <string name="sesame">Sesame</string>
    <string name="tuna">Tuna</string>
    <string name="salmon">Salmon</string>
    <string name="caviar">Caviar</string>
    <string name="anchovies">Anchovies</string>
    <string name="bass">Bass</string>
    <string name="catfish">Catfish</string>
    <string name="cod">Cod</string>
    <string name="flounder">Flounder</string>
    <string name="haddock">Haddock</string>
    <string name="hake">Hake</string>
    <string name="halibut">Halibut</string>
    <string name="herring">Herring</string>
    <string name="mahi">Mahi-mahi</string>
    <string name="perch">Perch</string>
    <string name="pollock">Pollock</string>
    <string name="pike">Pike</string>
    <string name="swordfish">Swordfish</string>
    <string name="sole">Sole</string>
    <string name="snapper">Snapper</string>
    <string name="surimi">Surimi</string>
    <string name="tilapia">Tilapia</string>
    <string name="trout">Trout</string>
    <string name="barnacle">Barnacle</string>
    <string name="crab">Crab</string>
    <string name="crawfish">Crawfish</string>
    <string name="krill">Krill</string>
    <string name="lobster">Lobster</string>
    <string name="scampi">Scampi</string>
    <string name="abalone">Abalone</string>
    <string name="clams">Clams</string>
    <string name="cockle">Cockle</string>
    <string name="limpet">Limpet</string>
    <string name="mussels">Mussels</string>
    <string name="octopus">Octopus,Squid</string>
    <string name="oysters">Oysters</string>
    <string name="periwinkle">Periwinkle</string>
    <string name="urchin">Urchin</string>
    <string name="scallops">Scallops</string>
    <string name="snails">Snails</string>
    <string name="whelk">Whelk</string>
    <string name="wheat">Wheat</string>
    <string name="durum">Durum</string>
    <string name="emmer">Emmer</string>
    <string name="rye">Rye</string>
    <string name="barley">Barley</string>
    <string name="triticale">Triticale</string>
    <string name="malt">Malt</string>
    <string name="semolina">Semolina</string>
    <string name="spelt">Spelt</string>
    <string name="farina">Farina</string>
    <string name="farro">Farro</string>
    <string name="graham">Graham</string>
    <string name="kamut">Kamut</string>
    <string name="einkorn">Einkorn</string>
    <string name="apple">Apple</string>
    <string name="pear">Pear</string>
    <string name="tomato">Tomato</string>
    <string name="strawberry">Strawberry</string>
    <string name="prune">Prune</string>
    <string name="pomegranate">Pomegranate</string>
    <string name="pinapple">Pineapple</string>
    <string name="persimmon">Persimmon</string>
    <string name="peach">Peach</string>
    <string name="orange">Orange</string>
    <string name="melon">Melon</string>
    <string name="mango">Mango</string>
    <string name="lychee">Lychee</string>
    <string name="kiwi">Kiwi</string>
    <string name="grape">Grape</string>
    <string name="date">Date</string>
    <string name="fig">Fig</string>
    <string name="coconut">Coconut</string>
    <string name="cherry">Cherry</string>
    <string name="banana">Banana</string>
    <string name="apricot">Apricot</string>
    <string name="acerola">Acerola</string>
    <string name="avocado">Avocado</string>
    <string name="shellfish">Shellfish</string>
    <string name="gluten">Gluten</string>
    <string name="fish">Fish</string>
    <string name="milk">Milk</string>
    <string name="seeds">Seeds</string>
    <string name="deleteHistory">Delete History</string>
    <string name="scanPhotos">No history yet!</string>
    <string name="language">Language</string>
    <string name="languageFrom">Translate From</string>
    <string name="languageGeneral">General Language</string>
    <string name="startPageHeader">Tap below to scan text</string>
    <string name="definitelyContained">Definitely contained</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="allergies">Allergies</string>
    <string name="dontUse">Don\'t Use!</string>
    <string name="scannedTextBelow">Scanned text below:</string>
    <string name="youCanUse">Can be used!</string>
    <string name="allergy">Allergy:</string>
    <string name="contained">Contained</string>
    <string name="times">times</string>
    <string name="probablyContained">Probably contained</string>
    <string name="fromWord">from word:</string>
    <string name="myAllergies">My allergies</string>
    <string name="share">Share</string>
    <string name="send">Send Translation</string>
    <string name="mustBeInEnglish">Text must be written in English or Swedish! Thanks!</string>
    <string name="sendTipsFrom">Where you want to send tips from?</string>
    <string name="welcomeMessageInvite">Keep your allergies in Check, With Allergy Checker!</string>
    <string name="time">time</string>
    <string name="buckwheat">Buckwheat</string>
    <string name="mustardSeed">Mustard Seed</string>
    <string name="poppySeed">Poppy Seed</string>
    <string name="pumpkinSeed">pumpkin Seed</string>
    <string name="sunflowerSeed">Sunflower Seed</string>
    <string name="fruit">Fruit</string>
    <string name="vegetables">Vegetables</string>
    <string name="cannotUseCamera">Cannot use camera without permission!</string>
    <string name="varning">Warning!</string>
    <string name="thisAppOnlySave">If permission is not given, this app will not work as intended. Remember the only thing getting saved is the text. If you don\'t give permission the application might need to be reinstalled to work! Have a fantastic day!</string>
    <string name="mightContainOther">This is only a guideline! And might contain other allergens</string>
    <string name="mightContainAllergies">This is only a guideline! And might contain allergens</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="citrus">Citrus</string>
    <string name="haram">Haram</string>
    <string name="legumes">Legumes</string>
    <string name="aspargus">Asparagus</string>
    <string name="bellPepper">Bell Pepper</string>
    <string name="cabbage">Cabbage</string>
    <string name="carrot">Carrot</string>
    <string name="celery">Celery</string>
    <string name="garlic">Garlic</string>
    <string name="lettuce">Lettuce</string>
    <string name="maize">Maize, Corn</string>
    <string name="potato">Potato</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="zucchini">Zucchini</string>
    <string name="pig">Pig</string>
    <string name="duck">Duck</string>
    <string name="meat">Meat</string>
    <string name="goat">Goat</string>
    <string name="poultry">Poultry</string>
    <string name="lamb">Lamb</string>
    <string name="sausage">Sausage</string>
    <string name="beef">Beef</string>
    <string name="veal">Veal</string>
    <string name="gelatin">Gelatin</string>
    <string name="dairy">Dairy</string>
    <string name="egg">Egg</string>
    <string name="honey">Honey</string>
    <string name="lactoVegetarian">Lacto Vegetarian</string>
    <string name="ovoVegetarian">Ovo Vegetarian</string>
    <string name="lactoOvoVegetarian">Lacto Ovo Vegetarian</string>
    <string name="demiVegetarian">Demi Vegetarian</string>
    <string name="polloVegetarian">Pollo Vegetarian</string>
    <string name="pescoVegetarian">Pesco Vegetarian</string>
    <string name="chicken">Chicken</string>
    <string name="areYouSure">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="flashon">Flash On</string>
    <string name="cancel">Cancel</string>
    <string name="inputIngredients">Input ingredients</string>
    <string name="rate">Rate</string>
    <string name="pressMe">Press me \nto continue!</string>
    <string name="firstIntro">When scanning text with the camera. Text boxes will cover the text.
        Tapping a text box will make the app analyze all text in the text boxes viewable on the screen and text boxes being saved from before.
        A good example how the text boxes should look is the one above.</string>
    <string name="secondIntro">If you find the text you scanned is bad, hold down your finger to remove all scanned text.</string>
    <string name="thirdIntro">You should not tap the text boxes when the text boxes appear like this
        since it will only scan a small percentage of the full text.</string>
    <string name="tutorial">Tutorial</string>
    <string name="anis">Anis</string>
    <string name="coriander">Coriander</string>
    <string name="cumin">Cumin</string>
    <string name="fennel">Fennel</string>
    <string name="parsley">Parsley</string>
    <string name="ragweed">Ragweed</string>
    <string name="echinacea">Echinacea</string>
    <string name="artichoke">Artichoke</string>
    <string name="dandelions">Dandelions</string>
    <string name="hibiscus">Hibiscus</string>
    <string name="chickpea">Chickpeas</string>
    <string name="lentil">Lentils</string>
    <string name="lupin">Lupin</string>
    <string name="peanut">Peanuts, Peanut</string>
    <string name="pea">Peas</string>
    <string name="soybean">soybean</string>
    <string name="lemon">Lemon</string>
    <string name="lime">Lime</string>
    <string name="grapefruit">Grapefruit</string>
    <string name="about">About</string>
    <string name="helpTranslate">Help Translating</string>
    <string name="specialThanksTo" translatable="false">Special thanks to all Alpha Testers</string>
    <string name="thisappUses" translatable="false">This app uses:</string>
    <string name="FAB" translatable="false">FloatingActionButton by Clans</string>
    <string name="BkTree" translatable="false">BK-tree by Kelsey Francis</string>
    <string name="OnBoardMe" translatable="false">OnboardMe by simith</string>
    <string name="licence" translatable="false">All of which is under Apache License version 2.0 may be optained at: http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="googleCamera" translatable="false">Google Vision API - The Android Open Source Project</string>
    <string name="googleAdMob" translatable="false">Google, Inc. Google AdMob</string>
    <string name="SharingIsCaring">Sharing is caring</string>
    <string name="myPreference">My preferences</string>
    <string name="showAllergies">Show Allergies</string>
    <string name="sendTips">Send tips / bugs</string>
</resources>